--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8085
 spring.application.name=flyway
 
 spring.datasource.url=jdbc:postgresql://localhost:5433/flyway
@@ -7,6 +7,7 @@ spring.datasource.password=1234567
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=false
