--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 			<plugin>
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
+				<configuration>
+					<url>jdbc:postgresql://${TEST_HOST}:${TEST_PORT}/${TEST_DB}</url>
+					<user>${TEST_USER}</user>
+					<password>${TEST_PASSWORD}</password>
+					<cleanDisabled>false</cleanDisabled>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
